# llm-washing-machine-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  DOWNLOAD_SUMMARY.md  README.md  compound_nouns_test.jsonl  dataset_search_results.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_search_results/: consolidated_papers.md  feature_absorption_splitting_sparse_autoencoder_compound_words_20260207_185533.jsonl  linear_representation_hypothesis_word_embeddings_concept_directions_transformer_20260207_184330.jsonl  mechanistic_interpretability_compound_concepts_multi-word_expressions_LLM_repres_20260207_184104.jsonl  probing_transformer_representations_compositional_semantics_multi-token_concepts_20260207_184712.jsonl  processing_summary.json  sparse_autoencoder_features_language_model_interpretability_Anthropic_20260207_184726.jsonl  superposition_polysemanticity_features_neural_network_sparse_autoencoder_20260207_184157.jsonl
papers/: README.md
results/: config.json  exp1_next_token.json  exp2_residual_directions.json  exp3_probing.json  exp4_attention.json  statistical_analysis.json  validation_gpt2medium.json
src/: analysis.py  experiment.py  validation_gpt2medium.py
(+21 files in other folders)
